--- a/doc/index.docbook
+++ b/doc/index.docbook
@@ -84,26 +84,26 @@ For sequential code, collecting statistical data of the programs
 runtime characteristic like time
 numbers spent in functions and code lines usually is enough.
 This is called Profiling. The program is run under control of a profiling tool, which gives the summary of an execution run at the end.
-In contrast, for parallel code, performance problems typically are caused when one processor is waiting for data of another. As this waiting time usually can not easily attributed, here it is better to generate timestamped event traces. KCachegrind can not visualize this kind of data.
+In contrast, for parallel code, performance problems typically are caused when one processor is waiting for data from another. As this waiting time usually can not easily attributed, here it is better to generate timestamped event traces. KCachegrind can not visualize this kind of data.
 </para>
 
 <para>
-After analysing the produced profile data, it should be easy
-to see the hot spots and bottlenecks of the code. E.g., assumptions
+After analyzing the produced profile data, it should be easy
+to see the hot spots and bottlenecks of the code: for example, assumptions
 about call counts can be checked, and identified code regions can be optimized.
-Afterwards, the optimization success should be verified again with another profile run.
+Afterwards, the success of the optimization should be verified with another profile run.
 </para>
 </sect1>
 
 <sect1 id="introduction-methods">
 <title>Profiling Methods</title>
 
-<para>Exact measurement of time passed by or events happening in the execution of a code region (e.g. a function) needs additional measurement code to be inserted before and after the given region. This code reads the time or a global event count, and calculates differences. Thus, the original code has to be changed before execution. This is called instrumentation. Instrumentation can be done by the programmer itself, the compiler, or by the runtime system. As interesting regions usually are nested, the overhead of measurement always influences the measurement itself. Thus, instrumentation should be done selectively and results have to be interpreted with care. Of course, this makes performance analysis by exact measurement a very complex process.</para>
+<para>To exactly measure the time passed or record the events happening during the execution of a code region (e.g. a function), additional measurement code needs to be inserted before and after the given region. This code reads the time, or a global event count, and calculates differences. Thus, the original code has to be changed before execution. This is called instrumentation. Instrumentation can be done by the programmer itself, the compiler, or by the runtime system. As interesting regions usually are nested, the overhead of measurement always influences the measurement itself. Thus, instrumentation should be done selectively and results have to be interpreted with care. Of course, this makes performance analysis by exact measurement a very complex process.</para>
 
-<para>Exact measurement is possible because of hardware counters (including counters incrementing on a time tick) provided in modern processors, which are incremented whenever an event is happening. As we want to attribute events to code regions, without the counters, we would have to handle every event by incrementing a counter for the current code region ourself. Doing this in software of course is not possible. But on the assumption that the event distribution over source code is similar when looking only at every n-th event instead of every event, we have constructed a measurement method which is tunable regarding overhead. It is called Sampling. Time Based Sampling (TBS) is using a timer to regularly look at the program counter to create a histogram over the program code. Event Based Sampling (EBS) is exploiting the hardware counters of modern processors, and is using a mode where an interrupt handler is called on counter underflow, generating a histogram of the corresponding event distribution. In the handler, the event counter is always reinitialized to the n of the sampling method. Advantage of sampling
+<para>Exact measurement is possible because of hardware counters (including counters incrementing on a time tick) provided in modern processors, which are incremented whenever an event is happening. As we want to attribute events to code regions, without the counters, we would have to handle every event by incrementing a counter for the current code region ourself. Doing this in software is, of course, not possible; but, on the assumption that the event distribution over source code is similar when looking only at every n-th event instead of every event, a measurement method whose overhead is tunable has been developed: it is called Sampling. Time Based Sampling (TBS) uses a timer to regularly look at the program counter to create a histogram over the program code. Event Based Sampling (EBS) exploits the hardware counters of modern processors, and uses a mode where an interrupt handler is called on counter underflow to generate a histogram of the corresponding event distribution: in the handler, the event counter is always reinitialized to the 'n' of the sampling method. The advantage of sampling
 is that the code does not have to be changed, but it is still a compromise: the above assumption will be more correct if n is small, but the smaller the n, the higher the overhead of the interrupt handler.</para>
 
-<para>Yet another measurement method is to simulate things happening in the computer system when executing a given code, i.e. execution driven simulation. Of course, the simulation is always derived from a more or less accurate machine model. For very detailed models approximating reality, the simulation time can be unacceptable high for practice. Advantage is that arbitrary complex measurement/simulation code can be inserted in a given code without perturbing results. Doing this directly before execution (called runtime instrumentation), using the original binary, is very comfortable for the user. The method becomes usable when simulating only parts of a machine with a simple model. Besides, results produced by simple models often are way easier to understand: the problem with real hardware often is that results include overlapping effects from different parts of the machine.</para>
+<para>Another measurement method is to simulate things happening in the computer system when executing a given code, i.e. execution driven simulation. The simulation is always derived from a more or less accurate machine model; however, with very detailed machine models, giving very close approximations to reality, the simulation time can be unacceptably high in practice.  The advantage of simulation is that arbitrarily complex measurement/simulation code can be inserted in a given code without perturbing results. Doing this directly before execution (called runtime instrumentation), using the original binary, is very comfortable for the user: no re-compilation is necessary.  Simulation becomes usable when simulating only parts of a machine with a simple model; another advantage is that the results produced by simple models are often easier to understand: often, the problem with real hardware is that results include overlapping effects from different parts of the machine.</para>
 </sect1>
 
 <sect1 id="introduction-tools">
@@ -113,44 +113,44 @@ is that the code does not have to be changed, but it is still a compromise: the 
 Most known is the GCC profiling tool <application>gprof</application>:
 One needs to compile the program with option <option>-pg</option>;
 running the program generates a file <filename>gmon.out</filename>,
-which can be transformed into human readable form with
-<command>gprof</command>. One disadvantage is the needed compilation
-step for a prepared executable, which has to be statically linked.
-The method used here is compiler generated instrumention which is measuring call arcs happening among functions and according call counts, in conjunction with TBS, which gives a histogram of time distribution over the code. Using both information, it is possible to heuristically calculate inclusive time of functions, i.e. time spent in a function together with all functions called from it.
+which can be transformed into human-readable form with
+<command>gprof</command>. One disadvantage is the needed re-compilation
+step to prepare the executable, which has to be statically linked.
+The method used here is compiler-generated instrumention - which measures call arcs happening among functions and corresponding call counts - in conjunction with TBS - which gives a histogram of time distribution over the code. Using both pieces of information, it is possible to heuristically calculate inclusive time of functions, i.e. time spent in a function together with all functions called from it.
 </para>
 
-<para>For exact measurement of events happening, there exist libraries with functions able to read out hardware performance counters. Most known here is the PerfCtr patch for Linux, and the architecture independent libraries PAPI and PCL. Still, exact measurement needs instrumentation of code, as stated above. Either one uses the libraries itself or uses automatic instrumentation systems like ADAPTOR (for FORTRAN source instrumentation) or DynaProf (code injection via DynInst).</para>
+<para>For exact measurement of events happening, libraries exist with functions able to read out hardware performance counters. Most known here is the PerfCtr patch for Linux, and the architecture independent libraries PAPI and PCL. Still, exact measurement needs instrumentation of code, as stated above. Either one uses the libraries itself or uses automatic instrumentation systems like ADAPTOR (for FORTRAN source instrumentation) or DynaProf (code injection via DynInst).</para>
 
-<para>&oprofile; is a systemwide profiling tool for Linux using Sampling.</para>
+<para>&oprofile; is a system-wide profiling tool for Linux using Sampling.</para>
 
 <para>
 In many aspects, a comfortable way of Profiling is using
 Cachegrind or Callgrind, which are simulators using the runtime
 instrumentation framework &valgrind;. Because there is no need
-to access hardware counters (often difficult with todays Linux installations), and binaries to be profiled can be left unmodified,
-it's a good alternative way to other profiling tools.
-The disadvantage of simulation slowdown can be reduced by doing the simulation only on the interesting program parts, and perhaps only on a few iterations of a loop. Without measurement/simulation instrumentation, Valgrind's usage only has a slowdown in the range of 3-5.
-And when only the call graph and call counts
+to access hardware counters (often difficult with today's Linux installations), and binaries to be profiled can be left unmodified,
+it is a good alternative to other profiling tools.
+The disadvantage of simulation - slowdown - can be reduced by doing the simulation on only the interesting program parts, and perhaps only on a few iterations of a loop. Without measurement/simulation instrumentation, Valgrind's usage only has a slowdown factor in the range of 3 to 5.
+Also, when only the call graph and call counts
 are of interest, the cache simulator can be switched off.
 </para>
 
 <para>
-Cache simulation is the first step in approximating real times, as
-on modern systems, runtime is very sensitive to the exploitation
-of so called caches, small and fast buffers which accelerate repeated
-accesses to the same main memory cells.
+Cache simulation is the first step in approximating real times; as
+,on modern systems, runtime is very sensitive to the exploitation
+of so called caches (small and fast buffers which accelerate repeated
+accesses to the same main memory cells.) 
 &cachegrind; does cache simulation by catching
 memory accesses.
 The data produced
 includes the number of instruction/data memory accesses and 1st/2nd
 level cache misses, and relates it to source lines and functions of
-the run program. By combining these miss counts, using typical miss latencies, an estimation of spent time can be given.
+the run program. By combining these miss counts, using miss latencies from typical processors, an estimation of spent time can be given.
 </para>
 
 <para>Callgrind is an extension of &cachegrind; that
 builds up the call graph of a program on-the-fly,
 &ie; how the functions call each other and how many events happen
-while running a function. Besides, the profile data to be collected
+while running a function. Also, the profile data to be collected
 can separated by threads and call chain contexts. It can provide
 profiling data on an instruction level to allow for annotation of
 disassembled code.
@@ -162,7 +162,7 @@ disassembled code.
 
 <para>
 Profiling tools typically produce a large amount of data. The wish
-to easily browse down and up the call graph, together with fast switching of the sorting mode of functions and display of different event types, motivates for a GUI application to accomplish this task.
+to easily browse down and up the call graph, together with fast switching of the sorting mode of functions and display of different event types, motivates a GUI application to accomplish this task.
 </para>
 
 <para>
@@ -176,7 +176,7 @@ Besides a list of functions sorted according exclusive or inclusive cost metrics
 <itemizedlist>
 <listitem><para>a call-graph view, which shows a section of the call graph around the selected function,</para>
 </listitem>
-<listitem><para>a tree-map view, which allows to visualize nested call relation together with inclusive cost metric for fast visual detection of problematic functions,</para>
+<listitem><para>a tree-map view, which allows nested-call relations to be visualized, together with inclusive cost metric for fast visual detection of problematic functions,</para>
 </listitem>
 <listitem><para>source code and disassembler annotation views, allowing to see details of cost related to source lines and assembler instructions.</para>
 </listitem>
@@ -196,7 +196,7 @@ Besides a list of functions sorted according exclusive or inclusive cost metrics
 runtime characteristics of an application, using a profiling tool. &kcachegrind;
 itself does not include any profiling tool, but is good in being used together with
 &callgrind;, and by using a converter, also can be used to visualize data produced
-with &oprofile;. Despite the scope of this manual is not to document profiling
+with &oprofile;.  Although the scope of this manual is not to document profiling
 with these tools, the next section provides short quickstart tutorials to get you started.
 </para>
 
@@ -233,8 +233,8 @@ callgrind --dump-before=KonqMainWindow::slotReload konqueror </command></para></
 
 This will produce multiple profile data files with an additional
 sequential number at the end of the filename. A file without such an
-number at the end (only ending in the process PID) will also being produced.
-By loading this file into &kcachegrind;, all others are loaded too, and can
+number at the end (only ending in the process PID) will also be produced;
+by loading this file into &kcachegrind;, all others are loaded too, and can
 be seen in the Parts Overview and Parts list.
 </para>
 
@@ -246,16 +246,16 @@ be seen in the Parts Overview and Parts list.
 <para>
 &oprofile; is available from
 <ulink url="http://oprofile.sf.net">
-http://oprofile.sf.net</ulink>. Follow the installation instructions on the web site.
-But before, check if your distribution does not already provide it as package (like SuSE).
+http://oprofile.sf.net</ulink>. Follow the installation instructions on the web site;
+but, before you do, check if your distribution does not already provide it as package (like SuSE).
 </para>
 
 <para>
-System wide profiling is only permitted to the root user,
-as all actions on the system can be observed. Therefore, the following has to be done as root.
+System-wide profiling is only permitted to the root user,
+as all actions on the system can be observed; therefore, the following has to be done as root.
 First, configure the profiling process, using the GUI <command>oprof_start</command> or the
-command line tool opcontrol. Standard configuration should be timer mode (TBS, see introduction). To start the measurement, run
-<command>opcontrol -s</command>. Then run the application you are interested in, and afterwards, do a <command>opcontrol -d</command>. This will write out
+command-line tool opcontrol. Standard configuration should be timer mode (TBS, see introduction). To start the measurement, run
+<command>opcontrol -s</command>. Then run the application you are interested in and, afterwards, do a <command>opcontrol -d</command>. This will write out
 the measurement results into files under directory <filename>/var/lib/oprofile/samples/</filename>. To be able to visualize the data in &kcachegrind;, do in an empty directory:
 
 <blockquote><para><command>
@@ -274,8 +274,8 @@ on the system. Each one can be loaded into &kcachegrind; on its own.
 
 <para>
 When starting &kcachegrind; with a profile data file as argument, or after loading one with File/Open, you will see a sidebar containing the function list
-at the left, and on the right the main part, an area with visualizations for
-a selected function. This visualization area can be arbitrary configured to
+at the left; and, on the right the main part, an area with visualizations for
+a selected function. This visualization area can be arbitrarily configured to
 show multiple visualizations at once.
 </para>
 
@@ -283,24 +283,24 @@ show multiple visualizations at once.
 At first start, this area will be
 divided into a top and a bottom part, each with different visualizations
 selectable by tabs. To move visualization views, use the context menu of
-the tabs, and adjust the splitters between visualizations. To fast switch
+the tabs, and adjust the splitters between visualizations. To quickly switch
 between different visualization layouts, use View/Layouts/Duplicate, change
-the layout and switch between layouts with View/Layout/Next (or better
-according keyboard shortcuts).
+the layout and switch between layouts with View/Layout/Next (or, even better,
+use the corresponding keyboard shortcuts).
 </para>
 
 <para>
-Important for visualization is the active event type: for &callgrind;, this
-is e.g. Cache Misses or Cycle Estimation, for &oprofile;, this is "Timer" in the simplest case. You can change the event type via a combobox in the toolbar or in the Event Type view.
-A first overview of the runtime characteristics should be given when you select function <symbol>main</symbol> in the left list, and look at the call graph visualization. There, you see calls happening in your program. Note that the call graph view only shows functions with high event count. By doubleclicking a function in the graph, it will change to show the called functions around the selected one.
+The active event type is important for visualization: for &callgrind;, this
+is, for example, Cache Misses or Cycle Estimation; for &oprofile;, this is "Timer" in the simplest case. You can change the event type via a combobox in the toolbar or in the Event Type view.
+A first overview of the runtime characteristics should be given when you select function <symbol>main</symbol> in the left list, and look at the call graph visualization; there, you see calls happening in your program. Note that the call graph view only shows functions with high event count. By double-clicking a function in the graph, it will change to show the called functions around the selected one.
 </para>
 
 <para>
 To explore the GUI further, in addition to this manual, also have a look at the documentation section on the web site
 <ulink url="http://kcachegrind.sf.net">
 http://kcachegrind.sf.net</ulink>.
-Besides,
-every widget in &kcachegrind; has <quote>Whats' this</quote> help.
+Also,
+every widget in &kcachegrind; has <quote>What's this</quote> help.
 </para>
 </sect1>
 
@@ -321,7 +321,7 @@ introduces terms used in the interface.
 <title>Cost Entities</title>
 
 <para>
-Cost counts of event types (like L2 Misses) are attributed to cost entities, which are items with relationship to source code or data structures of a given program. Cost entities not only can be simple code or data positions, but also position tupels. E.g., a call has a source and a target, or a data address can have a data type and an code position where its allocation has happened.
+Cost counts of event types (like L2 Misses) are attributed to cost entities, which are items with relationship to source code or data structures of a given program. Cost entities not only can be simple code or data positions, but also position tuples.  For example, a call has a source and a target, or a data address can have a data type and an code position where its allocation happened.
 </para>
 
 <para>
@@ -349,7 +349,7 @@ All functions whose first instruction is mapped to a line of the given source fi
 </para></listitem>
 <listitem><para>
 Class.
-Symbol names of functions typically are hierarchically ordered in name spaces, e.g. C++ namespaces, or classes of object oriented languages. Thus, a class can hold functions of the class or embedded classes itself.
+Symbol names of functions typically are hierarchically ordered in name spaces, e.g. C++ namespaces, or classes of object oriented languages; thus, a class can hold functions of the class or embedded classes itself.
 </para></listitem>
 <listitem><para>
 Profile Part.
@@ -357,7 +357,7 @@ Some time section of a profile run, with a given thread ID, process ID, and comm
 </para></listitem>
 </itemizedlist>
 
-As seen from the list, a set of cost entities often defines another cost entity. Thus, there is a inclusion hierarchy of cost entities which should be obvious from the description above.
+As can be seen from the list, a set of cost entities often defines another cost entity; thus, there is a inclusion hierarchy of cost entities which should be obvious from the description above.
 </para>
 
 <para>
@@ -380,7 +380,7 @@ Call from source function to target function.
 </para></listitem>
 </itemizedlist>
 
-Jumps between functions are not allowed, as this makes no sense in a call graph. Thus, constructs like exception handling and long jumps in C have to be translated to popping the call stack as needed.
+Jumps between functions are not allowed, as this makes no sense in a call graph; thus, constructs like exception handling and long jumps in C have to be translated to popping the call stack as needed.
 </para>
 
 </sect2>
@@ -429,7 +429,7 @@ This state influences visualizations.
 Visualizations always are shown for one, the active, cost entity. When a given visualization is not appropriate for a cost entity, it is disabled (e.g. when selecting an ELF object in the group list by double-clicking, source annotation for an ELF object make no sense).
 </para>
 <para>
-E.g. for an active function, the callee list shows all the functions called from the active one. One can select one of these functions without making it active. If the call-graph is shown nearside, it will automatically select the same function.
+For example, for an active function, the callee list shows all the functions called from the active one: one can select one of these functions without making it active; also, if the call-graph is shown nearside, it will automatically select the same function.
 </para>
 
 </sect1>
@@ -466,21 +466,21 @@ The visualization area, typically the right part of a KCachegrind main window, i
 <sect2>
 <title>Areas of a Tab View</title>
 <para>
-Each tab view can hold up to four view areas, namely Top, Right, Left, Bottom. Each area can hold multiple stacked visualization views. The visible view of an area is selected by a tab bar. Tab bars of the top and right area are at the top, tab bars of the left and bottom area are at the bottom. You can specify which kind of visualization should go into which area by using the context menu of the tabs.
+Each tab view can hold up to four view areas, namely Top, Right, Left, and Bottom. Each area can hold multiple stacked visualization views. The visible view of an area is selected by a tab bar. The tab bars of the top and right area are at the top; the tab bars of the left and bottom area are at the bottom. You can specify which kind of visualization should go into which area by using the context menus of the tabs.
 </para>
 </sect2>
 
 <sect2>
 <title>Synchronized Visualization via Selected Entity in a Tab View</title>
 <para>
-Besides an active entity, each tab view has an selected entity. As most visualization types show multiple entities with the active one somehow centered, you change the selected item by navigating inside of an visualization (by clicking with the mouse or using the keyboard). Typically, selected items are shown in an highlighted state. By changing the selected entity in one of the visualization of a tab view, all other visualizations in tab view accordingly highlight the new selected entity.
+Besides an active entity, each tab view has an selected entity. As most visualization types show multiple entities with the active one somehow centered, you can change the selected item by navigating inside a visualization (by clicking with the mouse or using the keyboard). Typically, selected items are shown in an highlighted state. By changing the selected entity in one of the visualizations of a tab view, all other visualizations in the tab view accordingly highlight the new selected entity.
 </para>
 </sect2>
 
 <sect2>
 <title>Synchronization between Tab Views</title>
 <para>
-If there are multiple tab views, a selection change in one tab view leads to an activation change in the next (to right/to bottom) tab view. This kind of linkage e.g. should allow for fast browsing in call graphs.
+If there are multiple tab views, a selection change in one tab view leads to an activation change in the next (to right/to bottom) tab view. This kind of linkage should, for example, allow for fast browsing in call graphs.
 </para>
 </sect2>
 
@@ -514,10 +514,10 @@ In a profile run, multiple profile data files can be produced, which can be load
 The parts are further subdivided: there is a partitioning and an inclusive cost split mode:
 <itemizedlist>
 <listitem><para>
-Partitioning: You see the partitioning into groups for a profile data part, according to the group type selected. E.g. if ELF object groups are selected, you see colored rectangles for each used ELF object (shared library or executable), sized according to the cost spent therein.
+Partitioning: You see the partitioning into groups for a profile data part, according to the group type selected. For example, if ELF object groups are selected, you see colored rectangles for each used ELF object (shared library or executable), sized according to the cost spent therein.
 </para></listitem>
 <listitem><para>
-Inclusive Cost Split: A rectangle showing the inclusive cost of the current active function in the part is shown. This again is split up to show inclusive costs of its callees.
+Inclusive Cost Split: A rectangle showing the inclusive cost of the current active function in the part is shown. This, again, is split up to show inclusive costs of its callees.
 </para></listitem>
 </itemizedlist>
 </para>
@@ -550,7 +550,7 @@ By choosing an event type from the list, you change the type of costs shown all 
 <sect2>
 <title>Call Lists</title>
 <para>
-These lists show calls to/from the current active function. With ''all' callers/callees functions are meant which can be reached in caller/callee direction, even when other functions are inbetween.
+These lists show calls to/from the current active function. With ''all' callers/callees functions are meant which can be reached in caller/callee direction, even when other functions are in between.
 </para>
 <para>
 Call list views include:
@@ -597,7 +597,7 @@ The shown cost is only the cost which is spent while the active function was act
 For cycles, blue call arrows indicate that this is an artificial call added for correct drawing which actually never happened.
 </para>
 <para>
-If the graph is larger than the widget area, an bird's eye view is shown in one edge. There are similar visualization options as for the Call Treemap; the selected function is highlighted.
+If the graph is larger than the widget area, a bird's eye view is shown in one edge. There are similar visualization options as for the Call Treemap; the selected function is highlighted.
 </para>
 </sect2>
 
@@ -636,7 +636,7 @@ Select such a call information line to activate the call destination.
 <guimenuitem>New</guimenuitem>
 </menuchoice></term>
 <listitem><para><action>
-Opens an empty toplevel window where you can load profile data into.
+Opens an empty toplevel window into which you can load profile data.
 </action>
 This action is not really needed, as File/Open will give you a new toplevel window when the current one shows already some data.
 </para></listitem>
@@ -653,7 +653,7 @@ This action is not really needed, as File/Open will give you a new toplevel wind
 <listitem><para><action>
 Pops up the File Open Dialog to choose a profile data file to be loaded.
 </action>
-If there is some data already shown in the current toplevel window, this will open a new window. If you want to open additional profile data into the current window, use File/Add.
+If there is some data already shown in the current toplevel window, this will open a new window; if you want to open additional profile data in the current window, use File/Add.
 </para>
 <para>
 The name of profile data files usually ends in ..-, where and are optional and are used for multiple profile data files belonging to one application run. By loading a file ending only in ., eventually existing data files for this run, but with additional endings, are loaded too.
@@ -671,7 +671,7 @@ Example: If there exist profile data files cachegrind.out.123 and cachegrind.out
 <listitem><para><action>
 Adds a profile data file to the current window.
 </action>
-By this, you can force multiple data files to be loaded into the same toplevel window even if they are not from the same run as given by the profile data file naming convention. E.g. use it for nearside comparison.
+Using this, you can force multiple data files to be loaded into the same toplevel window even if they are not from the same run as given by the profile data file naming convention.  This can, for example, be used for nearside comparison.
 </para></listitem>
 </varlistentry>
 
@@ -712,7 +712,7 @@ This is most interesting after another profile data file was generated for an al
 <guimenu>View</guimenu>
 <guimenuitem>Primary Event Type</guimenuitem>
 </menuchoice></term>
-<listitem><para><action>(Todo)</action></para></listitem>
+<listitem><para><action>(To-do)</action></para></listitem>
 </varlistentry>
 
 <varlistentry>
@@ -720,7 +720,7 @@ This is most interesting after another profile data file was generated for an al
 <guimenu>View</guimenu>
 <guimenuitem>Secondary Event Type</guimenuitem>
 </menuchoice></term>
-<listitem><para><action>(Todo)</action></para></listitem>
+<listitem><para><action>(To-do)</action></para></listitem>
 </varlistentry>
 
 <varlistentry>
@@ -728,7 +728,7 @@ This is most interesting after another profile data file was generated for an al
 <guimenu>View</guimenu>
 <guimenuitem>Grouping</guimenuitem>
 </menuchoice></term>
-<listitem><para><action>(Todo)</action></para></listitem>
+<listitem><para><action>(To-do)</action></para></listitem>
 </varlistentry>
 
 <varlistentry>
@@ -736,7 +736,7 @@ This is most interesting after another profile data file was generated for an al
 <guimenu>View</guimenu>
 <guimenuitem>Layout</guimenuitem>
 </menuchoice></term>
-<listitem><para><action>(Todo)</action></para></listitem>
+<listitem><para><action>(To-do)</action></para></listitem>
 </varlistentry>
 
 <varlistentry>
@@ -744,7 +744,7 @@ This is most interesting after another profile data file was generated for an al
 <guimenu>View</guimenu>
 <guimenuitem>Split</guimenuitem>
 </menuchoice></term>
-<listitem><para><action>(Todo)</action></para></listitem>
+<listitem><para><action>(To-do)</action></para></listitem>
 </varlistentry>
 
 </variablelist>
@@ -790,7 +790,7 @@ What is the difference between 'Incl.' and 'Self' ?
 <para>These are cost attributes for functions regarding some event type. As functions can call each other, it makes sense to distinguish the cost of the function itself ('Self Cost') and the cost including all called functions ('Inclusive Cost'). 'Self' is sometimes also referred to as 'Exclusive' costs.
 </para>
 <para>
-So e.g. for main(), you will always have a inclusive cost of almost 100%, whereas the self cost is neglectable when the real work is done in another function.
+So, for example, for main(), you will always have a inclusive cost of almost 100%, whereas the self cost is negligible when the real work is done in another function.
 </para>
 </answer>
 </qandaentry>
@@ -801,7 +801,7 @@ So e.g. for main(), you will always have a inclusive cost of almost 100%, wherea
 </question>
 <answer>
 <para>
-Obviously KCachegrind is wrongly installed on your system. It is recommand to compile it with the installation prefix to be your system wide KDE base directory like <command>configure --prefix=/opt/kde3; make install</command>.
+Obviously KCachegrind is wrongly installed on your system. It is recommended to compile it with the installation prefix to be your system wide KDE base directory like <command>configure --prefix=/opt/kde3; make install</command>.
 If you choose another directory like $HOME/kde, you should set the environment variable KDEDIR to this directory before running KCachegrind.
 </para>
 </answer>
@@ -810,12 +810,12 @@ If you choose another directory like $HOME/kde, you should set the environment v
 <qandaentry>
 <question>
 <para>
-If I doubleclick on a function down in the Call Graph View, it shows for the function main the same cost as the selected function. Isn't this supposed to be constant 100% ?
+If I double-click on a function down in the Call Graph View, it shows for the function main the same cost as the selected function. Isn't this supposed to be constant 100% ?
 </para>
 </question>
 <answer>
 <para>
-You have activated a function below main() with cost less than main(). For any function, only that part of the full cost of the function is shown, that is spent while the activated function is running. I.e. cost shown for any function can never be higher than the cost of the activated function.
+You have activated a function below main() with cost less than main(). For any function, only that part of the full cost of the function is shown, that is spent while the activated function is running; that is, the cost shown for any function can never be higher than the cost of the activated function.
 </para>
 </answer>
 </qandaentry>
@@ -837,7 +837,7 @@ Profiling: The process of collecting statistical information about runtime chara
 Tracing: The process of supervising a program run and storing events happening sorted by a timestap in a output file, the Trace.
 </para></listitem>
 <listitem><para>
-Trace: A sequence of timestamped events that occured while tracing a program run. Its size is typically linear to the execution time of the program run.
+Trace: A sequence of timestamped events that occurred while tracing a program run. Its size is typically linear to the execution time of the program run.
 </para></listitem>
 <listitem><para>
 Profile Data File: A file containing data measured in a profile experiment (or part of) or produced by postprocessing a trace. Its size is typically linear to the code size of the program.
@@ -849,10 +849,10 @@ Profile Data Part (incorrectly used also: Trace Part): Data from a profile data 
 Profile Experiment: A program run supervised by a profiling tool, producing possibly multiple profile data files from parts and/or threads of the run.
 </para></listitem>
 <listitem><para>
-Profile Project: A configuration for profile experiments used for one program which has to be profiled, perhaps in multiple versions. Comparations of profile data typically only makes sense between profile data produced in experiments of one profile project.
+Profile Project: A configuration for profile experiments used for one program which has to be profiled, perhaps in multiple versions. Comparisons of profile data typically only makes sense between profile data produced in experiments of one profile project.
 </para></listitem>
 <listitem><para>
-Cost Entity: An abstract item related to source code to which event counts can be attributed. Dimensions for cost entities are code location (e.g. source line, function), data location (e.g. accessed data type, data object), execution location (e.g. thread, process), and tupels or tripels of forementioned positions (e.g. calls, object access from statement, evicted data from cache).
+Cost Entity: An abstract item related to source code to which event counts can be attributed. Dimensions for cost entities are code location (e.g. source line, function), data location (e.g. accessed data type, data object), execution location (e.g. thread, process), and tuples or triples of the aforementioned positions (e.g. calls, object access from statement, evicted data from cache).
 </para></listitem>
 <listitem><para>
 Event Type: The kind of event of which costs can be attributed to a cost entity. There exist real event types and inherited event types.
