--- a/TODO
+++ b/TODO
@@ -1,39 +1,6 @@
 TODO/Wishlist Items
 ===================
 
-Support for KCachegrind in Calltree
------------------------------------
-
-<<<<<<< TODO
-BUGS:
-- discarded separated by objname
- 
-=======
->>>>>>> 1.1.2.1
-WISHS:
-- store more details of calltree
-  - for every function call: executed from shared lib
-    (Not needed, if function names are unique in whole app)
-  - adaptive call chain context (Really needed ? MUCH Data!)
-- dump at
-  - breakpoints
-  - watchpoints (with data tracing!)
-  - every xxx BBs (DONE)
-- dump around
-  - function invocation
-  - KAction event
-  - DCOP event
-
-- data accesses from (instr address/count)
-  stack:   -> (function, stackframe-offset)
-  dynamic: -> (mem region start, [type], offset)
-              type can be get when a constructor is called for region
-  static:  -> (mem region start, type, offset)
-
-* Generate full instr/data access trace for offline analysis.
-
-* Appending mode
-
 
 KCachegrind
 -----------
@@ -65,12 +32,23 @@ General:
  - Try to reload source after config.
 * Session Management
 
-Assembler view:
-* Option for context lines
 
-Source view:
-* Option for context lines
-* Implicit jumps (green)
+
+Annotation Views:
+
+ BUGS:
+  * Draw problem with multiple srcs to one target
+  * REP case...
+
+ TODO:
+  * Selectable Jumps (Arrows)
+  * Tooltip for Jumps (Kind, from/to, jump count) 
+  * Show direction (arrows) on jump lines
+
+ Source view TODO:
+  * Implicit jumps (green) [needs support from the tool?]
+
+
 
 Callgraph:
 * Fix Arrows for back-arcs
@@ -90,5 +68,33 @@ WISHS:
 * Demangler (use c++filt)
 * Calculation of call weights (if not given)
 * OProfile, DynaProf
+
+Support for KCachegrind in Calltree
+-----------------------------------
+
+WISHS:
+- store more details of calltree
+  - for every function call: executed from shared lib
+    (Not needed, if function names are unique in whole app)
+  - adaptive call chain context (Really needed ? MUCH Data!)
+- dump at
+  - breakpoints
+  - watchpoints (with data tracing!)
+  - every xxx BBs (DONE)
+- dump around
+  - function invocation
+  - KAction event
+  - DCOP event
+
+- data accesses from (instr address/count)
+  stack:   -> (function, stackframe-offset)
+  dynamic: -> (mem region start, [type], offset)
+              type can be get when a constructor is called for region
+  static:  -> (mem region start, type, offset)
+
+* Generate full instr/data access trace for offline analysis.
+
+* Appending mode
+
 
 
