SVN_SILENT Correcting the encoding in KDE source code
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=486186

--- a/converters/README
+++ b/converters/README
@@ -14,7 +14,7 @@ pprof2calltree     Converter from APD PHP Profiler.
 Thanks go to
 * George Schlossnagle <george@omniti.com> for
   dprof2calltree and pprof2calltree,
-* Jörg Beyer <job@webde-ag.de> for
+* JÃ¶rg Beyer <job@webde-ag.de> for
   hotshot2calltree
 
 If you want to write a converter, have a look at the calltree format
